crates/toml_edit/tests/snapshots/invalid/ext/datetime/offset-plus-missing-hour-minute.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-09T09:09:09.09+
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid offset, expected hour
